# intake-cli

./: .gitignore  .intake.yaml.example  CHANGELOG.md  README.md  SECURITY.md  SEGUIMIENTO-V0.md  SEGUIMIENTO-V1.md  pyproject.toml
action/: action.yml
docs/: README.md  SEGUIMIENTO-V0.md  arquitectura.md  buenas-practicas.md  conectores.md  configuracion.md  despliegue.md  exportacion.md  feedback.md  flujos-trabajo.md  formatos-entrada.md  guia-cli.md  integracion-cicd.md  mcp-server.md  pipeline.md  plugins.md  seguridad.md  solucion-problemas.md  templates-personalizados.md  verificacion.md  watch-mode.md
docs/github-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v1.0.0.md
examples/feedback-loop/: README.md
examples/from-gitlab/: README.md  gitlab-issues.json
examples/from-jira/: README.md  jira-export.json
examples/from-jira-api/: README.md
examples/from-markdown/: README.md  requirements.md
examples/from-scratch/: README.md  idea.txt
examples/mcp-session/: README.md
examples/multi-source/: README.md  api-decisions.json  notes.txt  user-stories.md
examples/plugin-custom-parser/: README.md
examples/quick-mode/: README.md
examples/workflows-github/: ci.yml
src/intake/: __init__.py  __main__.py  cli.py
src/intake/analyze/: __init__.py  analyzer.py  complexity.py  conflicts.py  dedup.py  design.py  extraction.py  models.py  prompts.py  questions.py  risks.py
src/intake/config/: __init__.py  defaults.py  loader.py  presets.py  schema.py
src/intake/connectors/: __init__.py  base.py  confluence_api.py  github_api.py  gitlab_api.py  jira_api.py
src/intake/diff/: __init__.py  differ.py
src/intake/doctor/: __init__.py  checks.py
src/intake/estimate/: __init__.py  estimator.py
src/intake/export/: __init__.py  _helpers.py  architect.py  base.py  claude_code.py  copilot.py  cursor.py  generic.py  kiro.py  registry.py
src/intake/feedback/: __init__.py  analyzer.py  prompts.py  spec_updater.py  suggestions.py
src/intake/generate/: __init__.py  adaptive.py  lock.py  spec_builder.py
src/intake/ingest/: __init__.py  base.py  confluence.py  docx.py  github_issues.py  gitlab_issues.py  image.py  jira.py  markdown.py  pdf.py  plaintext.py  registry.py  slack.py  url.py  yaml_input.py
src/intake/llm/: __init__.py  adapter.py
tests/: conftest.py  test_cli.py
tests/fixtures/: confluence_api_response.json  confluence_page.html  github_issues.json  gitlab_issue_single.json  gitlab_issues.json  jira_api_response.json  jira_export.json  jira_export_multi.json  sample_webpage.html  simple_spec.md  slack_export.json  slack_thread.txt  structured_reqs.yaml  verify_report_failed.json
tests/test_analyze/: test_analyzer.py  test_complexity.py  test_conflicts.py  test_dedup.py  test_design.py  test_extraction.py  test_llm_adapter.py  test_risks.py
tests/test_config/: test_loader.py  test_presets.py  test_schema.py
tests/test_connectors/: test_base.py  test_confluence_api.py  test_github_api.py  test_gitlab_api.py  test_jira_api.py
tests/test_diff/: test_differ.py
tests/test_doctor/: test_checks.py
tests/test_estimate/: test_estimator.py
tests/test_export/: test_architect.py  test_claude_code.py  test_copilot.py  test_cursor.py  test_generic.py  test_helpers.py  test_kiro.py  test_protocol_conformance.py  test_registry.py
tests/test_feedback/: __init__.py  test_analyzer.py  test_spec_updater.py  test_suggestions.py
tests/test_generate/: test_adaptive.py  test_lock.py  test_spec_builder.py
tests/test_ingest/: test_confluence.py  test_github_issues.py  test_gitlab_issues.py  test_hardening.py  test_image.py  test_jira.py  test_markdown.py  test_plaintext.py  test_registry.py  test_slack.py  test_url.py  test_yaml_input.py
tests/test_mcp/: test_prompts.py  test_resources.py  test_server.py  test_tools.py
tests/test_plugins/: test_discovery.py  test_hooks.py  test_protocols.py
tests/test_templates/: test_loader.py
tests/test_utils/: test_cost.py  test_file_detect.py  test_project_detect.py  test_source_uri.py  test_task_state.py
tests/test_validate/: test_checker.py
tests/test_verify/: test_engine.py  test_reporter.py
tests/test_watch/: test_watcher.py
(+50 files in other folders)
